--- a/packages/nano402-nestjs/package.json
+++ b/packages/nano402-nestjs/package.json
@@ -30,11 +30,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nankio/nano402.git"
+    "url": "git+https://github.com/nano402/nano402-js.git"
   },
-  "homepage": "https://github.com/nankio/nano402#readme",
+  "homepage": "https://github.com/nano402/nano402-js#readme",
   "bugs": {
-    "url": "https://github.com/nankio/nano402/issues"
+    "url": "https://github.com/nano402/nano402-js/issues"
   },
   "dependencies": {
     "@nano402/core": "workspace:*"
