Refactor package naming from `@nano402/core` to `nano402` across all packages and documentation for consistency. Update publish scripts and dependencies accordingly. Adjust README files to reflect the new package structure.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "pnpm -r test",
     "dev": "pnpm -r --parallel dev",
     "clean": "pnpm -r clean",
-    "publish:core": "pnpm --filter @nano402/core publish --access public",
+    "publish:core": "pnpm --filter nano402 publish --access public",
     "publish:express": "pnpm --filter @nano402/express publish --access public",
     "publish:nestjs": "pnpm --filter @nano402/nestjs publish --access public",
     "publish:all": "pnpm publish:core && pnpm publish:express && pnpm publish:nestjs"
