--- a/packages/nano402-core/package.json
+++ b/packages/nano402-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nano402/core",
+  "name": "nano402",
   "version": "0.0.12",
   "description": "Core HTTP 402 payment library for Nano cryptocurrency - framework agnostic",
   "main": "./dist/index.js",
