--- a/packages/nano402-express/package.json
+++ b/packages/nano402-express/package.json
@@ -37,7 +37,7 @@
     "url": "https://github.com/nano402/nano402-js/issues"
   },
   "dependencies": {
-    "@nano402/core": "workspace:*"
+    "nano402": "workspace:*"
   },
   "peerDependencies": {
     "express": "^4.18.0"
