--- a/packages/nano402-nestjs/package.json
+++ b/packages/nano402-nestjs/package.json
@@ -37,7 +37,7 @@
     "url": "https://github.com/nano402/nano402-js/issues"
   },
   "dependencies": {
-    "@nano402/core": "workspace:*"
+    "nano402": "workspace:*"
   },
   "peerDependencies": {
     "@nestjs/common": "^10.0.0",
