Update author information in package.json files for nano402, express, and nestjs packages

--- a/packages/nano402-core/package.json
+++ b/packages/nano402-core/package.json
@@ -28,7 +28,7 @@
     "nodejs",
     "typescript"
   ],
-  "author": "xnowing",
+  "author": "fabiobalielo",
   "license": "MIT",
   "repository": {
     "type": "git",
