--- a/packages/nano402-express/package.json
+++ b/packages/nano402-express/package.json
@@ -26,7 +26,7 @@
     "express",
     "middleware"
   ],
-  "author": "xnowing",
+  "author": "fabiobalielo",
   "license": "MIT",
   "repository": {
     "type": "git",
