--- a/packages/nano402-nestjs/package.json
+++ b/packages/nano402-nestjs/package.json
@@ -26,7 +26,7 @@
     "nestjs",
     "guard"
   ],
-  "author": "xnowing",
+  "author": "fabiobalielo",
   "license": "MIT",
   "repository": {
     "type": "git",
