--- a/packages/nano402-nestjs/package.json
+++ b/packages/nano402-nestjs/package.json
@@ -40,12 +40,12 @@
     "nano402": "workspace:*"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0"
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.3",
