--- a/packages/nano402-core/package.json
+++ b/packages/nano402-core/package.json
@@ -57,5 +57,9 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "nano:nano_366td9nfbxns1tkq3u1ryoaazdzjc5ah3duipw5s7dah4nqna41a6hef3i7x"
   }
 }
